# dicomview-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  publish.sh
.github/workflows/: ci.yml
crates/dicomview-core/: Cargo.toml
crates/dicomview-core/examples/: benchmark_core.rs
crates/dicomview-core/src/: dicom_decode.rs  incremental_volume.rs  lib.rs  metadata.rs  presets.rs  viewport_state.rs  volume_assembly.rs
crates/dicomview-gpu/: Cargo.toml
crates/dicomview-gpu/src/: engine.rs  incremental_texture.rs  lib.rs  surface.rs
crates/dicomview-wasm/: Cargo.toml
crates/dicomview-wasm/src/: lib.rs  loader.rs  utils.rs  viewer.rs
crates/dicomview-wasm/tests/: web.rs
docs/: architecture.md  browser-support.md
examples/basic-mpr/: index.html  main.js
examples/volume-rendering/: index.html  main.js
js/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
js/src/: decode-worker.ts  index.ts  input-handler.ts  loader.ts  presets.ts  types.ts  viewer.ts
js/wasm/: dicomview_wasm.d.ts
