[workspace]
resolver = "2"
members = [
    "crates/dicomview-core",
    "crates/dicomview-gpu",
    "crates/dicomview-wasm",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Michael Knopke"]

[workspace.dependencies]
dicomview-core = { path = "crates/dicomview-core", version = "0.2.3" }
dicomview-gpu = { path = "crates/dicomview-gpu", version = "0.2.3" }

dicom-toolkit-core = "0.5.0"
dicom-toolkit-dict = "0.5.0"
dicom-toolkit-data = "0.5.0"
dicom-toolkit-image = "0.5.0"
dicom-toolkit-codec = "0.5.0"

volren-core = "0.3.1"
volren-gpu = "0.3.1"

glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["js"] }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wgpu = "29.0.1"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "AbortController",
    "AbortSignal",
    "Performance",
]

[workspace.dependencies.approx]
version = "0.5"

[workspace.dependencies.proptest]
version = "1"
