[package]
name = "dicomview-core"
description = "WASM-safe DICOM decode, incremental volumes, MPR state, and rendering presets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dicom-toolkit-core.workspace = true
dicom-toolkit-dict.workspace = true
dicom-toolkit-data.workspace = true
dicom-toolkit-image.workspace = true
dicom-toolkit-codec.workspace = true
volren-core.workspace = true
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid.workspace = true
