[package]
name = "dicomview-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dicomview-core.workspace = true
volren-core.workspace = true
volren-gpu.workspace = true
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
wgpu.workspace = true
web-sys.workspace = true

[dev-dependencies]
approx.workspace = true
pollster = "0.4"
